fix next time tooltip wrap

--- a/views/components/main/assets/admiral-panel.css
+++ b/views/components/main/assets/admiral-panel.css
@@ -2,3 +2,6 @@
   position: absolute;
   right: .5em;
 }
+.next-time-tooltip {
+  white-space: nowrap
+}
